--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,14 +11,30 @@ jobs:
     strategy:
       matrix:
         app: [frontend, backend]
+
     steps:
       - uses: actions/checkout@v4
+
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: cd ${{ matrix.app }} && npm ci
-      - run: cd ${{ matrix.app }} && npm run build
+
+      - name: Install dependencies
+        run: |
+          cd ${{ matrix.app }}
+          if [ -f package-lock.json ]; then
+            npm ci
+          else
+            npm install
+          fi
+
+      - name: Build app (if needed)
+        if: ${{ matrix.app == 'frontend' }}
+        run: |
+          cd frontend
+          npm run build
+
       - name: Docker build & push
         run: |
           docker build -t shirelchaulker/${{ matrix.app }} ./{{ matrix.app }}
@@ -28,6 +44,7 @@ jobs:
   cd:
     needs: ci
     runs-on: ubuntu-latest
+
     steps:
       - name: Deploy to VM
         uses: appleboy/ssh-action@v1
