--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
             npm install
           fi
 
-      - name: Build app (if needed)
+      - name: Build app
         if: ${{ matrix.app == 'frontend' }}
         run: |
           cd frontend
@@ -37,7 +37,8 @@ jobs:
 
       - name: Docker build & push
         run: |
-          docker build -t shirelchaulker/${{ matrix.app }} ./{{ matrix.app }}
+          cd ${{ matrix.app }}
+          docker build -t shirelchaulker/${{ matrix.app }} .
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
           docker push shirelchaulker/${{ matrix.app }}
 
