--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,12 +1,24 @@
+version: '3.8'
+
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
+      dockerfile: Dockerfile
+    volumes:
+      - ./backend:/app:ro
     ports:
-      - "5000:5000"
+      - '5000:5000'
+    environment:
+      - NODE_ENV=production
+    restart: unless-stopped
 
   frontend:
-    build: ./frontend
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     ports:
-      - "3000:80"
+      - '3000:80'
     depends_on:
       - backend
+    restart: unless-stopped
