--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,5 +54,17 @@ jobs:
           username: ${{ secrets.VM_USER }}
           key: ${{ secrets.VM_SSH_KEY }}
           script: |
+            echo "Connected to VM as $(whoami)"
+            echo "Current directory: $(pwd)"
+            echo "Docker version: $(docker --version)"
+            echo "Docker Compose version: $(docker-compose --version)"
+
+            cd /home/ubuntu/Notes_App
+
+            echo "Pulling latest images..."
             docker-compose pull
+
+            echo "Restarting containers..."
             docker-compose up -d --remove-orphans
+
+            echo "Deployment complete!"
